Completed types for Server to Client events.
